--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -5,7 +5,7 @@ ENV ROS_DISTRO=humble
 
 # Set up locale
 RUN apt update && apt install -y locales &&     locale-gen en_US en_US.UTF-8 &&     update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
-ENV LANG en_US.UTF-8
+ENV LANG=en_US.UTF-8
 
 # Install base tools
 RUN apt update && apt install -y wget curl gnupg2 lsb-release software-properties-common sudo
