--- a/simulator/supervisord.conf
+++ b/simulator/supervisord.conf
@@ -14,7 +14,11 @@ priority=20
 command=/usr/bin/x11vnc -forever -usepw -create -display :1
 priority=30
 
+[program:novnc]
+command=/usr/share/novnc/utils/launch.sh --vnc localhost:5901
+priority=40
+
 [program:roslaunch]
 command=bash -c "source /opt/ros/humble/setup.bash && source /turtlebot4_ws/install/setup.bash && ros2 launch turtlebot4_ignition_bringup turtlebot4_ignition.launch.py"
 environment=DISPLAY=:1
-priority=40
+priority=50
