--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -1,5 +1,6 @@
 FROM ubuntu:22.04
 
+ENV LANG=en_US.UTF-8
 ENV DEBIAN_FRONTEND=noninteractive
 ENV ROS_DISTRO=humble
 
@@ -7,13 +8,14 @@ ENV ROS_DISTRO=humble
 RUN apt update && apt install -y locales && \
     locale-gen en_US en_US.UTF-8 && \
     update-locale LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8
-ENV LANG=en_US.UTF-8
 
 # Install essentials
 RUN apt update && apt install -y \
     wget curl gnupg2 lsb-release sudo software-properties-common \
-    python3-colcon-common-extensions python3-rosdep git \
-    x11vnc xvfb fluxbox supervisor novnc websockify
+    python3-pip git x11vnc xvfb fluxbox supervisor novnc websockify
+
+# Use pip for colcon and rosdep
+RUN pip3 install -U colcon-common-extensions rosdep
 
 # Add ROS 2 key and repo
 RUN curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key | apt-key add - && \
@@ -31,10 +33,10 @@ RUN apt update && apt install -y \
     ros-dev-tools \
     ignition-fortress
 
-# Init rosdep
-RUN rosdep init && rosdep update
+# Init rosdep manually
+RUN mkdir -p /etc/ros/rosdep/sources.list.d && rosdep init && rosdep update
 
-# Create workspace
+# Create workspace and clone simulator
 RUN mkdir -p /turtlebot4_ws/src
 WORKDIR /turtlebot4_ws/src
 RUN git clone -b humble https://github.com/turtlebot/turtlebot4_simulator.git
@@ -42,7 +44,7 @@ RUN git clone -b humble https://github.com/turtlebot/turtlebot4_simulator.git
 WORKDIR /turtlebot4_ws
 RUN /bin/bash -c "source /opt/ros/humble/setup.bash && rosdep install --from-path src -yi && colcon build --symlink-install"
 
-# Set up sourcing
+# Add sourcing
 RUN echo "source /opt/ros/humble/setup.bash" >> ~/.bashrc && \
     echo "source /turtlebot4_ws/install/setup.bash" >> ~/.bashrc
 
