--- a/simulator/supervisord.conf
+++ b/simulator/supervisord.conf
@@ -11,7 +11,7 @@ environment=DISPLAY=:1
 priority=20
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -forever -usepw -create -display :1
+command=/usr/bin/x11vnc -nopw -forever -shared -display :1
 priority=30
 
 [program:novnc]
