--- a/simulator/supervisord.conf
+++ b/simulator/supervisord.conf
@@ -2,23 +2,28 @@
 nodaemon=true
 
 [program:xvfb]
-command=/usr/bin/Xvfb :1 -screen 0 1024x768x16
-priority=10
+command=/usr/bin/Xvfb :1 -screen 0 1280x800x24
+autostart=true
+autorestart=true
 
-[program:fluxbox]
-command=/usr/bin/fluxbox
+[program:lxsession]
+command=/usr/bin/lxsession -s LXDE -e LXDE
 environment=DISPLAY=:1
-priority=20
+autostart=true
+autorestart=true
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -nopw -forever -shared -display :1
-priority=30
+command=/usr/bin/x11vnc -display :1 -nopw -forever -shared -rfbport 5900
+autostart=true
+autorestart=true
 
 [program:novnc]
-command=/usr/share/novnc/utils/launch.sh --vnc localhost:5901
-priority=40
+command=/usr/share/novnc/utils/launch.sh --vnc localhost:5900 --listen 6080
+autostart=true
+autorestart=true
 
 [program:roslaunch]
 command=bash -c "source /opt/ros/humble/setup.bash && source /turtlebot4_ws/install/setup.bash && ros2 launch turtlebot4_ignition_bringup turtlebot4_ignition.launch.py"
 environment=DISPLAY=:1
-priority=50
+autostart=true
+autorestart=true
